fix(board): stopped flickering (as much as possible)

--- a/app/client/stylesheets/components/boardview/boardview-card.sass
+++ b/app/client/stylesheets/components/boardview/boardview-card.sass
@@ -1,3 +1,19 @@
 .pu-boardview-card
     white-space: normal
     cursor: move
+
+    &--is-ghost
+        border: 2px dashed #ccc
+        border-radius: 4px
+        .pu-activity
+            visibility: hidden
+
+    &--is-chosen
+        // border: 2px dashed #ccc
+        // border-radius: 4px
+
+    &--is-dragging
+
+        .pu-activity
+            // opacity: 0.5
+            background-color: #eee
